--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -5,17 +5,17 @@ on:
       - main
 jobs:
   gradle:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 17
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Execute Gradle build & shadowJar
-        run: ./gradlew build
+      - name: Execute Gradle shadowJar
+        run: ./gradlew shadowJar
       - uses: actions/upload-artifact@v3
         with:
           name: Package
-          path: build/native/nativeBuild/modification-updater
+          path: build/libs/modification-updater.jar
