--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -1,4 +1,4 @@
-name: Build native images on push to master
+name: Build fatjar on push to master
 on:
   push:
     branches:
@@ -7,12 +7,11 @@ jobs:
   gradle:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: 17
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+          cache: 'gradle'
       - name: Execute Gradle shadowJar
         run: ./gradlew shadowJar
       - uses: actions/upload-artifact@v3
