--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: 'zulu'
           cache: 'gradle'
       - name: Execute Gradle shadowJar
         run: ./gradlew shadowJar
