--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: 'zulu'
           cache: 'gradle'
       - name: Execute Gradle build
         run: ./gradlew build
